# sdrc-cloudlog

./: .gitignore  Makefile  README.md  config.toml  entry.py  flake.nix  pyproject.toml  requirements.txt
.github/workflows/: release-win.yml
sdrc_cloudlog/: __main__.py  background.py  cloudlog.py  config.py  rig.py  state.py
sdrc_cloudlog/ui/: __init__.py  app.py  cloudlog_frame.py  defaults_frame.py  entry.py  frame.py  rig_frame.py  status_frame.py
