[project]
name = "sdrc_cloudlog"
version = "0.0.1"
requires-python = ">= 3.8"
authors = [
    { name = "Matt G4IYT", email = "matt@g4iyt.uk" }
]
readme = "README.md"
dependencies = [
    "pyserial",
    "customtkinter",
    "toml",
    "requests",
    "platformdirs"
]

[project.scripts]
sdrc-cloudlog = "sdrc_cloudlog.__main__:main"